--- a/src/user/user-register.pug
+++ b/src/user/user-register.pug
@@ -2,12 +2,10 @@ extends ../layout
 
 block content 
   div.text-center
-    form(action="/users/login" method="POST")
-      h1() Please sign in
+    form(action="/users/register" method="POST")
+      h1() Please create your account
       input(name="username" placeholder="Username" required autofocus)
       br()
       input(type="password" name="password" placeholder="Password" required autofocus)
       br()
-      a(href="/users/register") no account? create one now.
-      br()
-      button(type="submit" value="Submit") Sign in
+      button(type="submit" value="Submit") Sign up
