--- a/src/layout.pug
+++ b/src/layout.pug
@@ -3,5 +3,6 @@ html
   head 
     title= title 
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css')
+    block head
   body 
     block content
